...
        android:textColor="@android:color/white"
        android:layout_marginTop="5dp"
        android:layout_marginStart="30dp"/>

    <!-- Difficulty Boxes -->
    <RadioGroup
        android:id="@+id/difficultyRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textSelectDifficulty"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <!-- Easy Game Mode -->
        <RadioButton
            android:id="@+id/btnEasy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Easy"
            android:background="@drawable/easy_button"
            android:textColor="@android:color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginEnd="8dp"
            android:button="@null"/>

        <!-- Medium Game Mode -->
        <RadioButton
            android:id="@+id/btnMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Medium"
            android:background="@drawable/medium_button"
            android:textColor="@android:color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:button="@null"/>

        <!-- Hard Game Mode -->
        <RadioButton
            android:id="@+id/btnHard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Hard"
            android:background="@drawable/hard_button"
            android:textColor="@android:color/white"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_marginStart="8dp"
            android:button="@null"/>
...
            android:layout_marginStart="20dp"/>

    </LinearLayout>

    <!-- Play Now Button -->
    <Button
        android:id="@+id/btnPlayNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="Play Now"
        android:layout_below="@id/howToBox"
        android:textSize="25sp"
        android:textColor="@android:color/black"
        android:backgroundTint="@android:color/white"/>

</RelativeLayout>
...
